# competitive-programming

./: A.cpp  A1.cpp  B-esprit.cpp  B.cpp  B.py  C.cpp  CMakeLists.txt  D.cpp  E.cpp  G.cpp  H.cpp  I.cpp  L.cpp  code.cpp  code.py  code2.cpp  code3.cpp  com.txt  input.txt  mehdi-khelil.cpp  output.txt  seg.cpp  tempCodeRunnerFile.cpp  test.cpp  test.md  vscode-snippets.txt
.cph/: .code.cpp_5dba0886d6712b737ad0a8f976b3b7d2.prob  .code2.cpp_ea9bbbd66b4a88446cd0b2981e2a9e13.prob  .code3.cpp_12beccbb230d067b51ed18a8648fb725.prob
CH11InclusionExclusionPrinciple/: TotalNumberOfDivisorsProblem.cpp  utiles.txt
CH12PrimeNumbersAndFactorisation/: PrimeFactorisation.cpp  PrimeQueries.cpp  SegmentedSieve.cpp  primeSieve.cpp  tempCodeRunnerFile.cpp  utiles.txt
CH13ExtendedEuclideanAlgorithm/: ExtendedEuclidean.cpp  LinearDiophantineEquation.cpp  MultiplicativeModuloInverse.cpp  gcd.cpp  utiles.txt
CH14NumberTheory/: ChineseRemainderTheoreme.cpp  EulerTotientFunction.cpp  ModuloArithmetic.cpp  tempCodeRunnerFile.cpp  utilies.txt
CH15Combinatorics/: BinominalCoefficient.cpp  CatalanNumbers.cpp  birthdayParadox.cpp  utiles.txt
CH16Recursion/: CountStrings.cpp  FriendPariringProblem.cpp  RecursionBasics.cpp  TilingProblem.cpp  TowerOfHanoi.cpp  tempCodeRunnerFile.cpp  utiles.txt
CH17BackTracking/: Brackets.cpp  NQueenCode.cpp  SudokuSolver.cpp  permutation.cpp  subsets.cpp  tempCodeRunnerFile.cpp  utiles.txt
CH18BinarySearch/: angryBirds.cpp  binarySearch.cpp  gameOfGreed.cpp  occurence.cpp  utiles.txt
CH19DivideAndConquer/: inversionCount.cpp  mergeSort.cpp  quickSelect.cpp  quickSort.cpp  tempCodeRunnerFile.cpp  ternarySearch.cpp  utiles.txt
CH20GreedyAlgorithms/: ActivitySelectionBusyMan.cpp  BiasedStandings.cpp  DEFKIN.cpp  utiles.cpp
CH21MeetInTheMiddle/: subSums.cpp
CH22SegmentTrees/: query_complexity_explained.txt  segmentTree.cpp
CH23LazyPropagation/: lazyPropagation.cpp  lazyPropagationForMinimum.cpp  tempCodeRunnerFile.cpp
CH24FenwickTree/: FenwickTree.cpp  dquery-problem.cpp  inversion-count.cpp
CH25SqrtDecomposition/: Mo-algorithm.cpp  sqrt-decomposition.cpp  tempCodeRunnerFile.cpp
CH28GraphTraversals/: Graph.cpp  Graph_cities.cpp  board-game.cpp  tempCodeRunnerFile.cpp
CH29GraphsAsTrees/: dfs-and-backedges.cpp  tree.cpp
CH30LowestCommonAncestor/: LCA-2pointers.cpp  LCA-optimised.cpp
CH31DirectedGraphs&SCC/: Kosaraju-Algorithm.cpp  Kosaraju-explication.md  topological-order.cpp
CH32DisjointSetUnionDataStructure/: DSU.cpp  cycle-detection-using-DSU.cpp
CH33SpanningTree/: KruskalAlgorithm.cpp  PrimAlgorithm.cpp
CH34ShortestPathsAlgorithms/: bellman-ford.cpp  djikestra.cpp  floyd-warshall.cpp  tempCodeRunnerFile.cpp
CH35ClassicalDynamicProgramming/: N-K-ladders.cpp  box-stacking.cpp  longest-incerasing-subsequence.cpp  minimum-jumps.cpp
CH5BitManipulation/: TravellingSalesmanProblem.cpp  allSubSets.cpp  tempCodeRunnerFile.cpp  uniqueNumber1.cpp  uniqueNumber2.cpp  uniqueNumber3.cpp  utiles.cpp  utiles.txt
CH7BigIntegers/: AddBigIntegers.cpp  BigIntegerClass.java  BigIntegerPython.py  Factorial.java  JulkaProblem.java  MultplicationAndFactorial.cpp  tempCodeRunnerFile.cpp  utiles.txt
CH8LinearRecurrences&MatrixExponentiation/: BinaryExponentiation.cpp  BinaryModularExponentiation.cpp  FastMultiplication.cpp  Fibonacci.cpp  SumOfSuiteRecurrent.cpp  utiles.txt
CH9PigeonholePriciple/: DIVSUB.cpp  GraySimilarCode.cpp  HolidayAccomadation.cpp  utiles.txt
File/: B.cpp  output.txt
Greedy/: code.cpp  output.txt  tempCodeRunnerFile.cpp  template.cpp
Keyboard/: A.cpp
others/LIS/: longest-increasing-subsequence.cpp  problem-spoj.cpp
others/Trie Node/: maxXORSubarray.cpp  trieNode.cpp
